feat: added new flavors, staging and prod

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Ablespace</string>
+    <string name="app_name0" translatable="false">Ablespace</string>
 </resources>
